syntax = "proto3";
package bskycreeper.generic;

option go_package = "github.com/zakshearman/bluesky-creeper/pkg/proto/generated";

import "google/protobuf/timestamp.proto";

message PostCreatedEvent {
  string did = 1;
  google.protobuf.Timestamp event_time_US = 2;
  google.protobuf.Timestamp post_time_US = 3;
  string text = 4;
  repeated string languages = 5;

  // Embed data, index 6

  repeated Facet facets = 7;

  // Reply data, index 8
}

message Facet {
  repeated Feature features = 1;

  // Character count offsets from the start of the post (byte offsets in UTF-8 encoding), see https://docs.bsky.app/docs/advanced-guides/post-richtext
  int32 byte_start = 2; // technically a byte but there is no byte type
  int32 byte_end = 3; // technically a byte but there is no byte type
}

message Feature {
  FeatureType type = 1;

  optional string link_uri = 20;

  optional string tag_value = 30;

  optional string mention_target_did = 40;
}

enum FeatureType {
  UNKNOWN = 0;
  LINK = 1;
  TAG = 2;
  MENTION = 3;
}

message LinkFeature {
  string uri = 1;
}

message TagFeature {
  string tag = 1;
}

message MentionFeature {
  string target_did = 1;
}